030-software/fluxcd/apps/code-server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
spec:
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
        policy.gatekeeper.sh/ignore-container-must-have-limits: "true"
    spec:
      serviceAccountName: code-server-admin
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: code-server
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: code-server
      containers:
        - name: code-server
          image: ghcr.io/coder/code-server:4.138.0@sha256:81706b71ace316157850cbcfb574714d1067249c107a415b3a03dc6b613ebfbc
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          args:
            - --auth
            - none
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: temp
              mountPath: /home/coder
            - name: data
              mountPath: /home/coder/data
            - name: shared
              mountPath: /home/coder/shared
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              memory: 4096Mi
      volumes:
        - name: temp
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: code-server
        - name: shared
          nfs:
            server: genji.home.arpa
            path: /shared
