030-software/fluxcd/apps/code-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: code-server
