030-software/fluxcd/apps/code-server/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server
  annotations:
    dashboard.${domain}/name: code-server
    dashboard.${domain}/url: https://code-server.${domain}
    dashboard.${domain}/icon: microsoft-visual-studio-code
spec:
  hostnames:
  - code-server.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: code-server
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
